--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -2,6 +2,10 @@ h1 {
     font-size: 4rem;
     text-align: center;
     padding-top: 3rem;
+
+    @include mobile {
+        font-size: 3rem;
+    }
 }
 
 h2 {
