--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,8 +2,9 @@
 @import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
 
 // Variabler
-$gradient: linear-gradient(-70deg, #fca062, #cf6593, #9258b4, #23abd5);
-$gradient-dark: linear-gradient(-70deg, invert(#fca062), invert(#cf6593), invert(#9258b4), invert(#23abd5));
+// linear-gradient(-70deg, #fca062, #cf6593, #9258b4, #23abd5);
+$gradient-dark: linear-gradient(-70deg, #e25b01, #e44d8e, #8f2fc7, #02495f);
+$gradient: linear-gradient(-70deg, #fca062, #cf6593, #a96bce, #23abd5);
 $link-color: lighten(#fca062, 80);
 $footer-margin: 2rem 2rem 6rem 2rem;
 $img-right-margin: 5rem 0 0 2rem;
