--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -24,6 +24,17 @@ main {
     padding: 0 1rem;
 }
 
+#nav-icon {
+    display: none;
+
+    @include mobile {
+        display: initial;
+        font-size: 2.5rem;
+        padding: 1rem;
+    }
+}
+
+
 header {
     height: 350px;
     display: block;
@@ -88,6 +99,10 @@ nav {
     ul {
         display: flex;
         list-style-type: none;
+
+        @include mobile {
+            flex-direction: column;
+        }
     }
 
     li {
@@ -108,6 +123,12 @@ nav {
             color: darken($link-color, 20);
             letter-spacing: 1px;
         }
+    }
+}
+
+#navbar-desktop {
+    @include mobile {
+        display: none;
     }
 }
 
