Adding mobile menu thats works. Also adding article3

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,11 +1,16 @@
 // Nollställer styling i webbläsaren
 @import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
 
+// Typsnitt Roboto & Unica One
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Unica+One&display=swap');
+
 // Variabler
 // linear-gradient(-70deg, #fca062, #cf6593, #9258b4, #23abd5);
 $gradient-dark: linear-gradient(-70deg, #e25b01, #e44d8e, #8f2fc7, #02495f);
 $gradient: linear-gradient(-70deg, #fca062, #cf6593, #a96bce, #23abd5);
 $link-color: lighten(#fca062, 80);
+$mobile-nav-color: #1f072c;
+$mobile-nav-background: #461163;
 $footer-margin: 2rem 2rem 6rem 2rem;
 $img-right-margin: 5rem 0 0 2rem;
 $img-left-margin: 5rem 2rem 0 0;
@@ -33,4 +38,8 @@ $img-left-margin: 5rem 2rem 0 0;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+html {
+    scroll-behavior: smooth;
 }
