--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -1,15 +1,27 @@
+body {
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
+    font-size: 1.1rem;
+}
+
 h1 {
+    font-family: 'Unica One', cursive;
     font-size: 4rem;
+    letter-spacing: 20px;
     text-align: center;
-    padding-top: 3rem;
+    padding-top: 5rem;
 
     @include mobile {
         font-size: 3rem;
+        letter-spacing: 5px;
     }
 }
 
 h2 {
-font-size: 2rem;
+    font-size: 2rem;
 
+    @include mobile {
+        font-size: 1.7rem;
+    }
 }
 
