--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -30,14 +30,26 @@ main {
     @include mobile {
         display: initial;
         font-size: 2.5rem;
-        padding: 1rem;
+        padding: 0 1rem;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        background: $mobile-nav-color;
     }
 }
 
-
 header {
-    height: 350px;
+    min-height: 350px;
     display: block;
+    position: relative;
+    padding-top: 4rem;
+
+    @include mobile {
+        padding-top: 2rem;
+        min-height: unset;
+        height: auto;
+    }
 }
 
 .flex-container {
@@ -48,7 +60,7 @@ header {
     }
 }
 
-#article2 {
+#article2-flex {
     @include mobile {
         flex-direction: column-reverse;
     }
@@ -81,7 +93,8 @@ header {
 // Articles
 article {
     max-width: 700px;
-    margin: 0 auto 7rem auto;
+    margin: 0 auto 5rem auto;
+    padding-top: 4rem;
 
     @include mobile {
         margin: 0 auto 4rem auto;
@@ -96,9 +109,27 @@ article {
 // Navigation
 nav {
     width: 100%;
+    background: $gradient;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    @include darkMode {
+        background: $gradient-dark;
+        
+    }
+
+    @include mobile {
+        top: 3.7rem;
+        background: $mobile-nav-background;
+    }
+
     ul {
         display: flex;
         list-style-type: none;
+        max-width: 2000px;
+        margin: auto;
 
         @include mobile {
             flex-direction: column;
@@ -113,7 +144,7 @@ nav {
         text-decoration: none;
         display: flex;
         padding: 1rem;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         color: $link-color;
         transition: ease 0.3s;
     }
