--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -1,3 +1,14 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+// Typsnitt
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
